# OmniCell-Agent

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile.worker  Makefile  README.md  pyproject.toml  test_docker_sock.py  test_llm.py  test_sandbox.py
backend/: README.md  alembic.ini  pyproject.toml
backend/src/omnicell_agent/agent/: __init__.py  cancellation.py  capability_process.py  executor.py  factory.py  loop.py  observer.py  policy.py  tooling.py
backend/src/omnicell_agent/api/: __init__.py  app.py  bootstrap.py  cli.py  contracts.py  health.py  routes.py  service.py  sse.py
backend/src/omnicell_agent/capabilities/: __init__.py  artifacts.py  atomic.py  bootstrap.py  catalog.py  contracts.py  errors.py  graph_a.py  graph_b.py  registry.py  worker.py
backend/src/omnicell_agent/core/: config.py  environment.py  logger.py
backend/src/omnicell_agent/llm/: __init__.py  bootstrap.py  errors.py  facade.py  factory.py  providers.py  registry.py  types.py
backend/src/omnicell_agent/persistence/: __init__.py  bootstrap.py  checkpointer.py  cli.py  config.py  database.py  guards.py  migrations.py  models.py  repositories.py  unit_of_work.py
backend/src/omnicell_agent/pipeline/: graph.py
backend/tests/agent/: test_cancellation.py  test_capability_process.py  test_loop.py  test_tooling.py
backend/tests/api/: test_contracts.py  test_health.py  test_openapi_snapshot.py  test_pagination.py  test_pagination_postgres.py
backend/tests/architecture/: test_supported_entries.py
backend/tests/capabilities/: test_atomic_capabilities.py  test_capability_foundation.py  test_graph_a_capability.py  test_graph_b_capability.py  test_skill_catalog.py
backend/tests/core_behaviors/: README.md  conftest.py  test_graph_a_behavior.py  test_graph_b_behavior.py
backend/tests/e2e/: __init__.py  live_server.py
backend/tests/fixtures/: capability_process_fixture.py  capability_process_supervisor.py
backend/tests/integration/: test_atomic_runtime.py  test_benchmark_smoke.py  test_context_resolver.py  test_graph_a.py  test_graph_a_runtime.py  test_graphb_self_reasoning.py  test_llm.py  test_nodes.py
backend/tests/llm/: __init__.py  conftest.py  test_bootstrap_facade.py  test_factory.py  test_provider_registry.py  test_role_usage.py
backend/tests/persistence/: test_app_persistence_unit.py  test_checkpointer_unit.py  test_postgres_integration.py  test_run_lifecycle_persistence.py
backend/tests/runs/: test_coordinator_postgres.py  test_event_log.py  test_status.py
backend/tests/runtime/: __init__.py  conftest.py  test_docker_cli.py  test_file_script_security.py  test_local_docker_backend.py  test_profile_paths.py  test_python_session.py
backend/tests/unit/: test_environment.py
contracts/: README.md
infra/: README.md  (+1 more)
(+165 files in other folders)
