[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "omnicell-agent"
version = "0.1.0"
description = "End-to-End scRNA-seq analysis agent framework based on LangGraph and CASSIA insights"
readme = "README.md"
authors = [
    { name = "luchong" }
]
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.0.25",
    "langchain>=0.1.10",
    "pydantic>=2.6.0",
    "pandas>=2.0.0",
    "scanpy>=1.9.0",
    "python-dotenv>=1.0.0",
    "docker>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
